# calzone-display

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  Cargo.toml  pyproject.toml
.github/scripts/: build-agent.sh  enable-ipc.py
.github/workflows/: package.yml
calzone_display/: __init__.py
crates/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/calzone-display-agent/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: app.rs  event.rs  geometry.rs  ipc.rs  lib.rs  numpy.rs
crates/data/: Cargo.toml
crates/data/src/: event.rs
crates/display/: Cargo.toml
crates/display/src/: app.rs  drone.rs  event.rs  geometry.rs  lib.rs  lighting.rs  sky.rs  ui.rs
crates/display/src/event/: data.rs
crates/display/src/geometry/: bundle.rs  data.rs  meshes.rs
crates/display/src/ui/: event.rs  location.rs  meters.rs  stats.rs
src/: app.rs  display.rs  drone.rs  event.rs  geometry.rs  ipc.rs  lib.rs  lighting.rs  main.rs  sky.rs  ui.rs  viewer.rs
src/event/: data.rs  numpy.rs  picking.rs
src/geometry/: bundle.rs  data.rs  meshes.rs  stl.rs  units.rs
src/python/calzone_display/: __init__.py
src/python/calzone_viewer/: __init__.py
src/ui/: event.rs  geometry.rs  lighting.rs  location.rs  meter.rs  meters.rs
