[package]
name = "calzone-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_rapier3d = "0.27"
serde = { version = "1", features = ["derive"] }
stl_io = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
