[package]
name = "core"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "_core"

[dependencies]
pyo3 = { version = "0.21", features = ["abi3", "extension-module"] }
ipc-channel = { workspace = true, optional = true }
rmp-serde = "1.3"
serde = { workspace = true }

agent = { path = "../agent", optional = true }
display = { path = "../display" }

[features]
ipc = [ "dep:ipc-channel", "dep:agent" ]
