[package]
name = "display"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "display"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "x11",
]}
bevy_atmosphere = { version = "0.10", default-features = false, features = ["dithering", "procedural", "nishita"] }
bevy_polyline = "0.10"
bevy_rapier3d = "0.27"
bevy_simple_text_input = "0.9"
chrono = "0.4"
convert_case = "0.6"
data = { path = "../data" }
serde = { workspace = true }
spa = "0.5"
stl_io = "0.8"
